2008-02-17  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/2dview.C:
	- updated copyright notice.

2008-02-15  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/smonitor_dev.C:
	- fixed players' number position in the v.1 protocl.

2008-02-10  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* NEWS:
	* configure.ac:
	- updated a NEWS file.
	- updated a version number string and news messages.
	Release 12.0.0_pre-20080210

2008-02-09  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/smonitor_dev.C:
	* src/valueparser.C:
	- commented out some debugging messages.
	- improved a score board message.
	- fixed a bun in the parameter name comparison.

2008-02-07  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/ascii_dev.h:
	* src/input_dev.h:
	* src/smonitor_dev.C:
	* src/smonitor_dev.h:
	- reimpleneted a scora information management.
	- improved a score board message for the penalty shootouts case.

2008-02-06  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/smonitor_dev.C:
	- fixed variable type errors for std::min.

2008-02-05  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/angle.C:
	* src/angle.h:
	* src/display_x11.h:
	* src/frame2d.C:
	* src/multi.h:
	* src/rgbcolor.C:
	* src/rgbcolor.h:
	* src/smonitor_dev.C:
	* src/smonitor_dev.h:
	* src/vector2d.C:
	* src/vector2d.h:
	* src/visobject.C:
	* src/visobject.h:
	- fixed coding style.

	* src/smonitor_dev.C:
	- slightly changed monitor protocol v3.

2008-02-04  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/2dview.C:
	* src/smonitor_dev.C:
	* src/smonitor_dev.h:
	- implemented v3 protocol parser alpha version.

2007-11-11  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/smonitor_dev.C:
	- implemneted a resizable player type parameters.

2007-11-01  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/2dview.C:
	* src/smonitor_dev.C:
	* src/smonitor_dev.h:
	- changed a player number position.
	- changed a default player number font and its color.