@@ -1,3 +1,8 @@
+2008-02-18  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* src/smonitor_dev.C:
+	- fixed show data format.
+
 2008-02-17  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* src/2dview.C:
